Fix issue where a null dataset ID in a test caused a type error. Also made other misc cleanups.